syntax = "proto3";
option java_package = "com.visitor.protocol";

/**
 * Messages from client to server.
 */

message JoinQueue {
    repeated string decklist = 3;
}

message LoadGame {
    string filename = 1;
}

message RegisterGameConnection {
    string gameID = 1;
}


message ClientMessage {
    oneof payload {
        JoinQueue                       joinQueue = 6;
        RegisterGameConnection          registerGameConnection = 11;
        LoadGame                        loadGame = 12;
    }
};
