syntax = "proto3";
option java_package = "com.visitor.protocol";


/**
 * Custom type messages. Should not be sent directly.
 */
enum Phase {
    NOPHASE = 0;
    REDRAW = 1;
    BEGIN = 2;
    MAIN_BEFORE = 3;
    ATTACK = 4;
    BLOCK = 5;
    MAIN_AFTER = 6;
    END = 7;
}

enum SelectFromType {
    NOTYPE = 0;
    LIST = 1;
    HAND = 3;
    PLAY = 4;
    SCRAPYARD = 5;
    VOID = 6;
    STACK = 7;
}
 
message Table
{
    string id = 1;
    string creator = 2;
    string opponent = 3;
}

enum Knowledge {
    NONE = 0;
    BLACK = 1;
    GREEN = 2;
    RED = 3;
    BLUE = 4;
    YELLOW = 5;
}

message KnowledgeGroup {
    Knowledge knowledge = 1;
    int32 count = 2;
}

enum Counter {
    NOCOUNTER = 0;
    CHARGE = 1;
}

message CounterGroup {
    Counter counter = 1;
    int32 count = 2;
}

message Blocker {
    string blockerId = 1;
    repeated string canBlock = 2;
}

message Attacker {
    string attackerId = 1;
    repeated string canAttackTo = 2;
}

message AttackerAssignment {
    string attackerId = 1;
    string attacked = 2;
}

message BlockerAssignment {
    string attackerId = 1;
    repeated string blockers = 2;
}

message Card {
    string id = 1;
    string name = 2;
    repeated CounterGroup counters = 3;
    bool depleted = 4;
    bool marked = 5;
    repeated string targets = 6;
    string description = 7;
    string cost = 8;
    repeated KnowledgeGroup knowledgeCost = 9;
    string type = 10;
    repeated string subtypes = 11;
    int32 health = 12;
    int32 delay = 13;
    int32 loyalty = 14;
    int32 shield = 15;
    int32 reflect = 16;
    int32 attack = 17;
    bool deploying = 18;
}

message Player {
    string id = 1;
    string userId = 2;
    int32 deckSize = 3;
    int32 energy = 4;
    int32 maxEnergy = 5;
    repeated Card hand = 6;
    repeated Card play = 7;
    repeated Card scrapyard = 8;
    repeated Card void = 9;
    repeated KnowledgeGroup knowledgePool = 10;
    int32 reflect = 11;
    int32 shield = 12;
    int32 handSize = 13;
    int32 health = 14;
}

message GameState {
    string id = 1;
    Player player = 2;
    Player opponent = 3;
    string turnPlayer =  4;
    string activePlayer = 5;
    repeated Card stack = 6;
    repeated string canPlay = 7;
    repeated string canActivate = 8;
    repeated string canStudy = 9;
    repeated string attackers = 11;
    repeated string blockers = 12;
    Phase phase = 10;
}

